--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -10,7 +10,7 @@ ARG CHANGE_SOURCE=false
 RUN if [ ${CHANGE_SOURCE} = true ]; then \
     # Change application source from dl-cdn.alpinelinux.org to aliyun source
     sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/' /etc/apk/repositories \
-;fi
+    ;fi
 
 RUN apk update \
     && apk upgrade \
@@ -41,4 +41,4 @@ ADD ./startup.sh /opt/startup.sh
 RUN sed -i 's/\r//g' /opt/startup.sh
 CMD ["/bin/bash", "/opt/startup.sh"]
 
-EXPOSE 80 81 443
+EXPOSE 80 81 443 8090 8091
