--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 ### Paths #################################################
 
 # Point to the path of your applications code on your host
-APP_CODE_PATH_HOST=../
+APP_CODE_PATH_HOST=../www/
 
 # Point to where the `APP_CODE_PATH_HOST` should be in the container
 APP_CODE_PATH_CONTAINER=/var/www
@@ -73,7 +73,7 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 ### Environment ###########################################
 
 # If you need to change the sources (i.e. to China), set CHANGE_SOURCE to true
-CHANGE_SOURCE=false
+CHANGE_SOURCE=true
 # Set CHANGE_SOURCE and UBUNTU_SOURCE option if you want to change the Ubuntu system sources.list file.
 UBUNTU_SOURCE=aliyun
 # Set ORACLE INSTANT_CLIENT_MIRROR option if you want to use Intranet improve download, you can download files first
@@ -103,7 +103,7 @@ WORKSPACE_COMPOSER_GLOBAL_INSTALL=true
 WORKSPACE_COMPOSER_VERSION=2
 WORKSPACE_COMPOSER_AUTH=false
 WORKSPACE_COMPOSER_REPO_PACKAGIST=
-WORKSPACE_NVM_NODEJS_ORG_MIRROR=
+WORKSPACE_NVM_NODEJS_ORG_MIRROR=https://npm.taobao.org/mirrors/node
 WORKSPACE_INSTALL_NODE=true
 WORKSPACE_NODE_VERSION=node
 WORKSPACE_NPM_REGISTRY=
@@ -112,7 +112,7 @@ WORKSPACE_NPM_FETCH_RETRY_FACTOR=10
 WORKSPACE_NPM_FETCH_RETRY_MINTIMEOUT=10000
 WORKSPACE_NPM_FETCH_RETRY_MAXTIMEOUT=60000
 WORKSPACE_INSTALL_PNPM=false
-WORKSPACE_INSTALL_YARN=true
+WORKSPACE_INSTALL_YARN=false
 WORKSPACE_YARN_VERSION=latest
 WORKSPACE_INSTALL_NPM_GULP=true
 WORKSPACE_INSTALL_NPM_BOWER=false
@@ -163,7 +163,7 @@ WORKSPACE_INSTALL_TERRAFORM=false
 WORKSPACE_INSTALL_DUSK_DEPS=false
 WORKSPACE_INSTALL_PG_CLIENT=false
 WORKSPACE_INSTALL_PHALCON=false
-WORKSPACE_INSTALL_SWOOLE=false
+WORKSPACE_INSTALL_SWOOLE=true
 WORKSPACE_INSTALL_TAINT=false
 WORKSPACE_INSTALL_LIBPNG=false
 WORKSPACE_INSTALL_GRAPHVIZ=false
@@ -239,7 +239,7 @@ PHP_FPM_INSTALL_PGSQL=false
 PHP_FPM_INSTALL_GHOSTSCRIPT=false
 PHP_FPM_INSTALL_LDAP=false
 PHP_FPM_INSTALL_PHALCON=false
-PHP_FPM_INSTALL_SWOOLE=false
+PHP_FPM_INSTALL_SWOOLE=true
 PHP_FPM_INSTALL_TAINT=false
 PHP_FPM_INSTALL_PG_CLIENT=false
 PHP_FPM_INSTALL_POSTGIS=false
@@ -357,12 +357,12 @@ APACHE_INSTALL_HTTP2=false
 
 ### MYSQL #################################################
 
-MYSQL_VERSION=latest
+MYSQL_VERSION=5.7
 MYSQL_DATABASE=default
-MYSQL_USER=default
-MYSQL_PASSWORD=secret
+MYSQL_USER=developer
+MYSQL_PASSWORD=abc@1234
 MYSQL_PORT=3306
-MYSQL_ROOT_PASSWORD=root
+MYSQL_ROOT_PASSWORD=siuwqelhie_23dsa
 MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
 
 ### CLICKHOUSE #################################################
@@ -435,8 +435,8 @@ SQS_MANAGEMENT_HTTP_HOST_PORT=9325
 RABBITMQ_NODE_HOST_PORT=5672
 RABBITMQ_MANAGEMENT_HTTP_HOST_PORT=15672
 RABBITMQ_MANAGEMENT_HTTPS_HOST_PORT=15671
-RABBITMQ_DEFAULT_USER=guest
-RABBITMQ_DEFAULT_PASS=guest
+RABBITMQ_DEFAULT_USER=hixon
+RABBITMQ_DEFAULT_PASS=asdasqw34123sazdc
 
 ### MERCURE ##############################################
 
@@ -988,7 +988,7 @@ GEARMAN_MYSQL_HOST=localhost
 GEARMAN_MYSQL_PORT=3306
 # Mysql server user (Default: root)
 GEARMAN_MYSQL_USER=root
-# Mysql password
+
 GEARMAN_MYSQL_PASSWORD=
 # Path to file with mysql password(Docker secrets)
 GEARMAN_MYSQL_PASSWORD_FILE=
