--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -41,4 +41,4 @@ ADD ./startup.sh /opt/startup.sh
 RUN sed -i 's/\r//g' /opt/startup.sh
 CMD ["/bin/bash", "/opt/startup.sh"]
 
-EXPOSE 80 81 443 8090 8091
+EXPOSE 80 81 443 8090 8091 8092 8099
