--- a/.env.example
+++ b/.env.example
@@ -1008,3 +1008,7 @@ TARANTOOL_ADMIN_PORT=8002
 NATS_CLIENT_PORT=4222
 NATS_MONITORING_PORT=6222
 NATS_ROUTE_PORT=8222
+
+### WORKSPACE IP ####################
+SWOFT_LISTEN_IP=workspace
+
