--- a/nginx/sites/front.conf.example
+++ b/nginx/sites/front.conf.example
@@ -18,6 +18,12 @@ server {
     root /var/www/frontend/dist;
     index index.html index.htm;
 
+    gzip on;
+    gzip_vary on;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/x-javascript application/javascript text/xml application/xml application/xml+rss text/javascript image/jpeg image/gif image/png image/jpg;
 
     error_log /var/www/logs/coffee_front_error.log;
     access_log /var/www/logs/coffee_front_access.log;
