--- a/.env.example
+++ b/.env.example
@@ -152,10 +152,10 @@ WORKSPACE_INSTALL_PRESTISSIMO=false
 WORKSPACE_INSTALL_LINUXBREW=false
 WORKSPACE_INSTALL_MC=false
 WORKSPACE_INSTALL_SYMFONY=false
-WORKSPACE_INSTALL_PYTHON=false
+WORKSPACE_INSTALL_PYTHON=true
 WORKSPACE_INSTALL_PYTHON3=false
 WORKSPACE_INSTALL_POWERLINE=false
-WORKSPACE_INSTALL_SUPERVISOR=false
+WORKSPACE_INSTALL_SUPERVISOR=true
 WORKSPACE_INSTALL_IMAGE_OPTIMIZERS=false
 WORKSPACE_INSTALL_IMAGEMAGICK=false
 WORKSPACE_IMAGEMAGICK_VERSION=latest
@@ -180,7 +180,7 @@ WORKSPACE_INSTALL_XMLRPC=false
 WORKSPACE_PUID=1000
 WORKSPACE_PGID=1000
 WORKSPACE_CHROME_DRIVER_VERSION=2.42
-WORKSPACE_TIMEZONE=UTC
+WORKSPACE_TIMEZONE=PRC
 WORKSPACE_SSH_PORT=2222
 WORKSPACE_INSTALL_FFMPEG=false
 WORKSPACE_INSTALL_AUDIOWAVEFORM=false
@@ -208,7 +208,7 @@ PHP_FPM_BASE_IMAGE_TAG_PREFIX=latest
 PHP_FPM_INSTALL_BCMATH=true
 PHP_FPM_INSTALL_MYSQLI=true
 PHP_FPM_INSTALL_INTL=true
-PHP_FPM_INSTALL_IMAGEMAGICK=true
+PHP_FPM_INSTALL_IMAGEMAGICK=false
 PHP_FPM_IMAGEMAGICK_VERSION=latest
 PHP_FPM_INSTALL_OPCACHE=true
 PHP_FPM_INSTALL_IMAGE_OPTIMIZERS=true
@@ -305,7 +305,7 @@ PHP_WORKER_INSTALL_FFMPEG=false
 PHP_WORKER_INSTALL_AUDIOWAVEFORM=false
 PHP_WORKER_INSTALL_CASSANDRA=false
 PHP_WORKER_INSTALL_GEARMAN=false
-PHP_WORKER_INSTALL_REDIS=false
+PHP_WORKER_INSTALL_REDIS=true
 PHP_WORKER_INSTALL_IMAP=false
 PHP_WORKER_INSTALL_XMLRPC=false
 
