--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -96,7 +96,7 @@ RUN set -xe; \
 # Set Timezone
 ###########################################################################
 
-ARG TZ=UTC
+ARG TZ=PRC
 ENV TZ ${TZ}
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
