--- a/nginx/sites/front.conf.example
+++ b/nginx/sites/front.conf.example
@@ -20,6 +20,7 @@ server {
 
     gzip on;
     gzip_vary on;
+    gzip_static on;
     gzip_comp_level 6;
     gzip_buffers 16 8k;
     gzip_http_version 1.1;
