--- a/nginx/sites/coffee-api.conf.example
+++ b/nginx/sites/coffee-api.conf.example
@@ -40,9 +40,10 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_http_version 1.1;
-        # proxy_set_header Upgrade $http_upgrade;
-        # proxy_set_header Connection "upgrade";
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_set_header Connection "keep-alive";
+        proxy_read_timeout  180; 
 
         # 没有找到文件就转发到 swoole server
         # 也可去掉 if. 全部转发到后端server
