--- a/.env.example
+++ b/.env.example
@@ -360,7 +360,7 @@ APACHE_INSTALL_HTTP2=false
 MYSQL_VERSION=5.7
 MYSQL_DATABASE=default
 MYSQL_USER=developer
-MYSQL_PASSWORD=abc@1234
+MYSQL_PASSWORD=abc1234
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=siuwqelhie_23dsa
 MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
