--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -155,6 +155,7 @@ services:
         - "${WORKSPACE_VUE_CLI_UI_HOST_PORT}:8000"
         - "${WORKSPACE_ANGULAR_CLI_SERVE_HOST_PORT}:4200"
         - "18308:18308"
+        - "18307:18307"
       tty: true
       environment:
         - PHP_IDE_CONFIG=${PHP_IDE_CONFIG}
@@ -445,3 +446,19 @@ services:
         - 2375
       networks:
         - backend
+
+### REDISWEBUI ################################################
+    redis-webui:
+      build:
+        context: ./redis-webui
+      environment:
+        - ADMIN_USER=${REDIS_WEBUI_USERNAME}
+        - ADMIN_PASS=${REDIS_WEBUI_PASSWORD}
+        - REDIS_1_HOST=${REDIS_WEBUI_CONNECT_HOST}
+        - REDIS_1_PORT=${REDIS_WEBUI_CONNECT_PORT}
+      networks:
+        - backend
+      ports:
+        - "${REDIS_WEBUI_PORT}:80"
+      depends_on:
+        - redis
