redis auth && add filebeat config

--- a/.env.example
+++ b/.env.example
@@ -371,6 +371,7 @@ REDIS_WEBUI_PASSWORD=laradock
 REDIS_WEBUI_CONNECT_HOST=redis
 REDIS_WEBUI_CONNECT_PORT=6379
 REDIS_WEBUI_PORT=9987
+REDIS_WEBUI_REDIS_AUTH=
 
 ### MONGOWEBUI ###############################################
 MONGO_WEBUI_PORT=3000
