--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -228,6 +228,7 @@ services:
         - "9000"
       extra_hosts:
         - "dockerhost:${DOCKER_HOST_IP}"
+        - "unv.retail.com:${DOCKER_HOST_IP}"
       environment:
         - PHP_IDE_CONFIG=${PHP_IDE_CONFIG}
         - DOCKER_HOST=tcp://docker-in-docker:2376
@@ -352,69 +353,88 @@ services:
     #     - backend
 
 ### ElasticSearch ########################################
-    # elasticsearch:
-    #   build:
-    #     context: ./elasticsearch
-    #     args:
-    #       - ELK_VERSION=${ELK_VERSION}
-    #   volumes:
-    #     - elasticsearch:/usr/share/elasticsearch/data
-    #   environment:
-    #     - cluster.name=laradock-cluster
-    #     - node.name=laradock-node
-    #     - bootstrap.memory_lock=true
-    #     - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    #     - cluster.initial_master_nodes=laradock-node
-    #   ulimits:
-    #     memlock:
-    #       soft: -1
-    #       hard: -1
-    #     nofile:
-    #       soft: 65536
-    #       hard: 65536
-    #   ports:
-    #     - "${ELASTICSEARCH_HOST_HTTP_PORT}:9200"
-    #     - "${ELASTICSEARCH_HOST_TRANSPORT_PORT}:9300"
-    #   depends_on:
-    #     - php-fpm
-    #   networks:
-    #     - frontend
-    #     - backend
+    elasticsearch:
+      build:
+        context: ./elasticsearch
+        args:
+          - ELK_VERSION=${ELK_VERSION}
+      volumes:
+        - './elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml'
+        - elasticsearch:/usr/share/elasticsearch/data
+      environment:
+        - cluster.name=laradock-cluster
+        - node.name=laradock-node
+        - bootstrap.memory_lock=true
+        - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+        - cluster.initial_master_nodes=laradock-node
+      ulimits:
+        memlock:
+          soft: -1
+          hard: -1
+        nofile:
+          soft: 65536
+          hard: 65536
+      ports:
+        - "${ELASTICSEARCH_HOST_HTTP_PORT}:9200"
+        - "${ELASTICSEARCH_HOST_TRANSPORT_PORT}:9300"
+      depends_on:
+        - php-fpm
+      networks:
+        - frontend
+        - backend
 
 ### Logstash ##############################################
-    # logstash:
-    #   build:
-    #     context: ./logstash
-    #     args:
-    #       - ELK_VERSION=${ELK_VERSION}
-    #   volumes:
-    #     - './logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml'
-    #     - './logstash/pipeline:/usr/share/logstash/pipeline'
-    #   ports:
-    #     - '5001:5001'
-    #   environment:
-    #     LS_JAVA_OPTS: '-Xmx1g -Xms1g'
-    #   env_file:
-    #     - .env
-    #   networks:
-    #     - frontend
-    #     - backend
-    #   depends_on:
-    #     - elasticsearch
+    logstash:
+      build:
+        context: ./logstash
+        args:
+          - ELK_VERSION=${ELK_VERSION}
+      volumes:
+        - './logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml'
+        - './logstash/pipeline:/usr/share/logstash/pipeline'
+      ports:
+        - '5001:5001'
+      environment:
+        LS_JAVA_OPTS: '-Xmx1g -Xms1g'
+      env_file:
+        - .env
+      networks:
+        - frontend
+        - backend
+      depends_on:
+        - elasticsearch
 
 ### Kibana ##############################################
-    # kibana:
-    #   build:
-    #     context: ./kibana
-    #     args:
-    #       - ELK_VERSION=${ELK_VERSION}
-    #   ports:
-    #     - "${KIBANA_HTTP_PORT}:5601"
-    #   depends_on:
-    #     - elasticsearch
-    #   networks:
-    #     - frontend
-    #     - backend
+    kibana:
+      build:
+        context: ./kibana
+        args:
+          - ELK_VERSION=${ELK_VERSION}
+      volumes:
+        - './kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml'
+      ports:
+        - "${KIBANA_HTTP_PORT}:5601"
+      depends_on:
+        - elasticsearch
+      networks:
+        - frontend
+        - backend
+
+### filebeat ##############################################
+    filebeat:
+      build:
+        context: ./filebeat
+        args:
+          - ELK_VERSION=${ELK_VERSION}
+      volumes:
+        - './filebeat/config/filebeat.yml:/usr/share/filebeat/filebeat.yml'
+        - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}${APP_CODE_CONTAINER_FLAG}
+        - ${NGINX_HOST_LOG_PATH}:/var/log/nginx
+      depends_on:
+        - elasticsearch
+      networks:
+        - frontend
+        - backend
 
 ### Jenkins ###################################################
     # jenkins:
@@ -516,6 +536,7 @@ services:
         - ADMIN_PASS=${REDIS_WEBUI_PASSWORD}
         - REDIS_1_HOST=${REDIS_WEBUI_CONNECT_HOST}
         - REDIS_1_PORT=${REDIS_WEBUI_CONNECT_PORT}
+        - REDIS_1_AUTH=${REDIS_WEBUI_REDIS_AUTH}
       networks:
         - backend
       ports:
