--- a/logstash/config/logstash.yml
+++ b/logstash/config/logstash.yml
@@ -3,3 +3,6 @@ http.host: "0.0.0.0"
 xpack.monitoring.enabled: false
 config.reload.automatic: true
 path.config: "/usr/share/logstash/pipeline"
+
+// es
+xpack.monitoring.elasticsearch.hosts: [ http://elasticsearch:9200 ]
