--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.18
+FROM golang:1.20
 
 LABEL maintainer="Ving <ving@nivin.cn>"
 
@@ -6,7 +6,8 @@ ENV GOPROXY https://goproxy.cn,direct
 
 # 安装必要的软件包和依赖包
 USER root
-RUN sed -i 's/deb.debian.org/mirrors.tuna.tsinghua.edu.cn/' /etc/apt/sources.list && \
+RUN touch /etc/apt/sources.list && chmod -R 644 /etc/apt/sources.list && \
+    sed -i 's/deb.debian.org/mirrors.tuna.tsinghua.edu.cn/' /etc/apt/sources.list && \
     sed -i 's/security.debian.org/mirrors.tuna.tsinghua.edu.cn/' /etc/apt/sources.list && \
     sed -i 's/security-cdn.debian.org/mirrors.tuna.tsinghua.edu.cn/' /etc/apt/sources.list && \
     apt-get update && \
@@ -34,24 +35,14 @@ ENV PUID ${PUID}
 ARG PGID=1000
 ENV PGID ${PGID}
 RUN set -xe; \
-  groupadd -g ${PGID} developer && \
-  useradd -l -u ${PUID} -g developer -m developer && \
-  usermod -p "*" developer -s /bin/bash
+    groupadd -g ${PGID} developer && \
+    useradd -l -u ${PUID} -g developer -m developer && \
+    usermod -p "*" developer -s /bin/bash
 
 
 # 安装 goctl
 USER developer
 RUN GOPROXY=https://goproxy.cn/,direct
-
-# 安装 protoc
-# USER developer
-# COPY ./protoc-3.19.1-linux-x86_64.zip /tmp/protoc.zip
-# RUN unzip -d /tmp/protoc /tmp/protoc.zip && \
-#     mv /tmp/protoc/bin/protoc $GOPATH/bin
-
-# 安装 protoc-gen-go
-# USER developer
-# RUN go install github.com/golang/protobuf/protoc-gen-go@v1.4.0
 
 # $GOPATH/bin添加到环境变量中
 ENV PATH $GOPATH/bin:$PATH
