--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -41,4 +41,4 @@ ADD ./startup.sh /opt/startup.sh
 RUN sed -i 's/\r//g' /opt/startup.sh
 CMD ["/bin/bash", "/opt/startup.sh"]
 
-EXPOSE 80 81 443
+EXPOSE 80 81 443 5002 5003 5004 5005 5006 6001
