--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,7 @@ events {
 
 http {
 
-    log_format elk escape=json  '{"domain":"$server_name",' '"real_ip":"$remote_addr",' '"http_x_forwarded_for":"$http_x_real_ip",'
+    log_format elk_json escape=json  '{"domain":"$server_name",' '"real_ip":"$remote_addr",' '"http_x_forwarded_for":"$http_x_real_ip",'
                        '"time_local":"$time_iso8601",' '"request":"$request",' '"request_body":"$request_body",'
                         '"http_status":$status,' '"body_bytes_sent":$body_bytes_sent,' '"http_referer":"$http_referer",'
                         '"upstream_response_time":$upstream_response_time,' '"request_time":$request_time,'
